Fixed bottom of map which was not responsive + Layout improvements.

--- a/d3js/css/wwmap.css
+++ b/d3js/css/wwmap.css
@@ -57,7 +57,7 @@ section.mainmap {
 section.year-slider-section {
     clear: both;
     float: left;
-    margin-left:3em;
+    margin-left:1em;
 	margin-top:2.2em;
 	margin-bottom:1em;
     padding-right: 1em;
@@ -65,7 +65,7 @@ section.year-slider-section {
     position: relative;
 	top: 0px;
     width: 100%;
-    padding-right:5em;
+    padding-right:2em;
 }
 
 
@@ -74,7 +74,7 @@ aside.info {
 	float: right;
 	min-width: 150px;
 	position: relative;
-	width: 32%;
+	width: 36%;
 }
 
 .map-footer {
@@ -153,7 +153,7 @@ h2 > a {
     overflow: visible;
     position: relative;
     z-index:1;
-	width: 1600px;
+	width: 730px;
 }
 
 .map-svg {
@@ -184,7 +184,7 @@ h2 > a {
     float: left;
 	position: absolute;
 	left: 330px;
-	bottom: 480px;
+	bottom: 580px;
     margin: 0.25em 0;
     z-index: 2;
 }
@@ -281,8 +281,8 @@ h2 > a {
 	position:absolute;
     display: flex;
     float: left;
-	left: 290px;
-	top: 495px;
+	left: 300px;
+	top: 500px;
     font-weight: bold;
     margin-right: 0em;
 	margin-left: 1em;
@@ -349,11 +349,11 @@ h2 > a {
 /*--Map Legend--*/
 
 .legend {
-    height: 30px;
+    height: 50px;
 	position:absolute;
-	left:400px;
-    bottom:300px;
-    width: 23%;
+	left:66px;
+    bottom:150px;
+    width: 42%;
 }
 #map-legend-label {
 	text-align: center;
@@ -378,7 +378,7 @@ h2 > a {
 div.tooltip {
 
 	position: absolute;
-	z-index:40px;
+	z-index:40;
 	text-align: left;
 	width: 3em;
 	height: 5em;
@@ -695,7 +695,7 @@ aside.info {
 
 .indicator3 #country-info line.history,
 .indicator3 #country-info line.projection {
-	stroke: #555;
+	stroke: #DD7733;
 	}
 
 .indicator2 #country-info line.history,
@@ -846,9 +846,9 @@ aside.info {
 }
 
 #table1 td {
-	height: 40px;
+	height: 30px;
 	text-align: center;
-	font-size: 1.1em;
+	font-size: 1em;
 	font-weight: bold;
 	padding: 5px;
 	background: #FAFAFA;
@@ -856,19 +856,19 @@ aside.info {
 	
 #table1 th {
 	background: #DFDFDF;
-	height: 50px;
+	height: 30px;
 }
 
 /* Cells in even rows (2,4,6...) are one color */ 
 #table1 tr:nth-child(even) td { background: #F1F1F1; }  
 
 /* Cells in odd rows (1,3,5...) are another (excludes header cells)  */ 
-tr:nth-child(odd) td { background: #FEFEFE; }  
+tr:nth-child(odd) td { background: #FEFEFE;}  
 
-tr td:hover { background: #666; color: #FFF; }
+tr td:hover { background: #666; color: #3FC0F0;}
 
 /* Bottom row of table */
-#table1 tr:last-child {font-size: 1.2em;}
+#table1 tr:last-child {font-size: 1.1em;}
 
 /*------Footer----------------
  ===============================*/
